--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+          <selection class="chamada">
+            <div class=" chamada-texto" >
+                <header>Os jogadores famosos jogando poppy playtime<header>
+                    <h1>QUEM É O DESEMPREGADO?</h1>
+                
+
     
 </body>
 </html>
