--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
-<html lang=pt-br"en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musicas da Gabi</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Unhas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styler.css">
 </head>
 <body>
-          <selection class="chamada">
-            <div class=" chamada-texto" >
-                <header>Os jogadores famosos jogando poppy playtime<header>
-                    <h1>QUEM É O DESEMPREGADO?</h1>
-                
+    <section class="chamada">
+        <div class="chamda-texto">
+            <header>Cuidados de unhas</header>
+            <h1>5 DICAS DE COMO TER UNHAS NATURAIS GRANDES E FORTES</h1>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Go4-stZ9L_8?si=SxqM4RwpSQVQO1JO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
 
+    </section>
+    <section class="categoria">
+        <h2> Mais vídeos</h2>
+        <div class="categoria-texto">
+            <a href="https://www.youtube.com/watch?v=KnlRCoH2wo8">
+                <img src="https://img.youtube.com/vi/KnlRCoH2wo8/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=T6WQY9Ay2Rs">
+                <img src="https://img.youtube.com/vi/T6WQY9Ay2Rs/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=nX_R2pGJtOY">
+                <img src="https://img.youtube.com/vi/nX_R2pGJtOY/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=yIYFy8dFv4w">
+                <img src="https://img.youtube.com/vi/yIYFy8dFv4w/maxresdefault.jpg">
+            </a>
+        </a>
+        <a href="https://www.youtube.com/watch?v=Z7d5OcEvnNo">
+            <img src="https://img.youtube.com/vi/Z7d5OcEvnNo/maxresdefault.jpg">
+        </a>
+        </div>
+    </section>
     
 </body>
 </html>
+
