--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 <body>
     <section class="chamada">
         <div class="chamda-texto">
-            <header>Cuidados de unhas</header>
-            <h1>5 DICAS DE COMO TER UNHAS NATURAIS GRANDES E FORTES</h1>
+            <header>video de comédia </header>
+            <h1>5< aqules caras/h1>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Go4-stZ9L_8?si=SxqM4RwpSQVQO1JO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src=https://www.youtube.com/watch?v=2nSy5WI6RE0QVQO1JO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
     </section>
     <section class="categoria">
         <h2> Mais vídeos</h2>
         <div class="categoria-texto">
-            <a href="https://www.youtube.com/watch?v=KnlRCoH2wo8">
-                <img src="https://img.youtube.com/vi/KnlRCoH2wo8/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=FbBW8FSGs1w">
+                <img src="https://img.youtube.com/vi/FbBW8FSGs1w/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=T6WQY9Ay2Rs">
-                <img src="https://img.youtube.com/vi/T6WQY9Ay2Rs/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=bUN5iUj_mQQ">
+                <img src="https://img.youtube.com/vi/bUN5iUj_mQQ/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=nX_R2pGJtOY">
-                <img src="https://img.youtube.com/vi/nX_R2pGJtOY/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=t0bdqJrVJdk">
+                <img src="https://img.youtube.com/vi/t0bdqJrVJdk/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=yIYFy8dFv4w">
-                <img src="https://img.youtube.com/vi/yIYFy8dFv4w/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=hOxYY2hHujU">
+                <img src="https://img.youtube.com/vi/hOxYY2hHujU/maxresdefault.jpg">
             </a>
         </a>
         <a href="https://www.youtube.com/watch?v=Z7d5OcEvnNo">
